# tdx-attestation-sdk

./: .gitignore  Cargo.toml  README.md
crates/coco-provider/src/: error.rs
tdx/: Cargo.toml  README.md
tdx/examples/: attestation.rs  fmspc.rs  inspect.rs
tdx/src/: device.rs  error.rs  lib.rs  utils.rs
tdx/src/pccs/: enclave_id.rs  fmspc_tcb.rs  mod.rs
zk/pico/: .env.example  .gitignore  Cargo.toml  README.md
zk/pico/app/: Cargo.toml
zk/pico/app/elf/: riscv32im-pico-zkvm-elf
zk/pico/app/src/: main.rs
zk/pico/core/: Cargo.toml
zk/pico/core/src/: lib.rs
zk/pico/lib/: Cargo.toml
zk/pico/lib/src/: lib.rs
zk/pico/prover/: Cargo.toml
zk/pico/prover/src/: cli.rs  evm_proof.rs  lib.rs  main.rs
zk/risc0/: .env.example  .gitignore  Cargo.toml  README.md
zk/risc0/boundless/: .env.example  Cargo.toml
zk/risc0/boundless/data/: input.hex  quotes-0.txt
zk/risc0/boundless/src/: attestation.rs  batch.rs  lib.rs  main.rs
zk/risc0/core/: Cargo.toml
zk/risc0/core/src/: lib.rs
zk/risc0/host/: Cargo.toml  README.md
zk/risc0/host/data/: signing_cert.pem
zk/risc0/host/src/: cli.rs  lib.rs  main.rs  proving.rs
zk/risc0/host/src/boundless/: mod.rs  proving.rs
zk/risc0/methods/: Cargo.toml
zk/risc0/methods/guest/: Cargo.toml
zk/risc0/methods/guest/src/: main.rs
zk/sp1/: .env.example  .gitignore  Cargo.toml  README.md  rust-toolchain
zk/sp1/core/: Cargo.toml
zk/sp1/core/src/: lib.rs
zk/sp1/program/: Cargo.toml
zk/sp1/program/src/: main.rs
zk/sp1/script/: Cargo.toml  build.rs
zk/sp1/script/src/: cli.rs
