[package]
name = "tdx"
version = "0.2.0"
edition = "2021"

[lib]
name = "tdx"
crate-type = ["rlib", "cdylib"]

[features]
default = ["configfs", "tpm"]
configfs = ["dep:coco-provider", "coco-provider/configfs"]
tpm = ["dep:coco-provider", "coco-provider/tpm"]
clib = ["configfs", "tpm"]
coco-provider = ["dep:coco-provider"]

[build-dependencies]
cbindgen = "0.29.0"

[profile.release]
lto = true

[dependencies]
rand.workspace = true
ureq.workspace = true
base64-url.workspace = true
serde.workspace = true
hex.workspace = true
alloy.workspace = true
anyhow.workspace = true
tokio.workspace = true
x509-parser.workspace = true
clap.workspace = true
pem.workspace = true
thiserror.workspace = true

coco-provider = { git = "https://github.com/automata-network/coco-provider-sdk", optional = true, default-features = false }
dcap-rs = { git = "https://github.com/automata-network/automata-dcap-attestation", rev="b996b1b" }
# Automata DCAP libraries for on-chain PCCS, v1.1
pccs-reader-rs = { git = "https://github.com/automata-network/automata-dcap-attestation", rev = "b996b1b" }
automata-dcap-network-registry = { git = "https://github.com/automata-network/automata-dcap-attestation", rev = "b996b1b" }
