[workspace]
resolver = "2"
members = [ "core","host", "methods"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
# dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git", branch = "DEV-4146/v5" }
dcap-rs = { path = "/Users/prestonong/Desktop/work/dcap-rs" }