[package]
name = "prover"
version = "0.1.0"
edition = "2024"

[dependencies]
pico-sdk = { workspace = true }
dcap-rs = { workspace = true }
pccs-reader-rs = { workspace = true }
pico-dcap-core = { path = "../core" }
clap = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num = { version = "0.4.3" }
num-bigint = { version = "0.4.6" }