[package]
name = "boundless"
version = "0.1.0"
edition = "2021"

[dependencies]
# methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.3" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
hex = "0.4"
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git" }
serde_json = "1.0"
boundless-market = "^1.0"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
pccs-reader-rs = { workspace = true }