[package]
name = "dcap-bonsai-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dcap-rs = { workspace = true }
core = { path = "../core" }
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.2.0" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.2.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = { version = "0.4" }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0.82"
pccs-reader-rs = { git = "https://github.com/automata-network/pccs-reader-rs.git", branch = "updates/preston" }