[package]
version = "0.1.0"
name = "dcap-script"
edition = "2021"
default-run = "dcap"

[[bin]]
name = "dcap"
path = "src/bin/dcap.rs"

[dependencies]
core = { path = "../core" }
dcap-rs = { workspace = true }
sp1-sdk = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"

[build-dependencies]
sp1-build = "^5.0.0"
sp1-sdk.workspace = true