[package]
version = "0.1.0"
name = "dcap-script"
edition = "2021"
default-run = "dcap-sp1-cli"

[[bin]]
name = "dcap-sp1-cli"
path = "src/bin/dcap.rs"

[dependencies]
core = { path = "../core" }
dcap-rs = { workspace = true }
sp1-sdk = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = { version = "0.4" }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0.82"
pccs-reader-rs = { git = "https://github.com/automata-network/pccs-reader-rs.git", branch = "updates/preston" }

[build-dependencies]
sp1-build = "^5.0.0"
sp1-sdk.workspace = true